[gd_scene load_steps=2 format=3 uid="uid://fy5xvtergi3a"]

[ext_resource type="Script" uid="uid://cddoylei1y73" path="res://scripts/vertical_menu.gd" id="1_hbco0"]

[node name="VerticalMenu" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_hbco0")

[node name="ColumnsContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(180, 0)
layout_mode = 0
offset_right = 180.0
theme_override_constants/separation = 10
alignment = 2

[node name="LeftColumn" type="VBoxContainer" parent="ColumnsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="RightColumn" type="VBoxContainer" parent="ColumnsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
